--- a/.github/workflows/Build-KernelSU-Next-SUSFS4OPAce2.yml
+++ b/.github/workflows/Build-KernelSU-Next-SUSFS4OPAce2.yml
@@ -124,12 +124,15 @@ jobs:
          cp kernel_workspace/kernel_platform/out/msm-${{ github.event.inputs.CPUD }}-${{ github.event.inputs.CPUD }}-gki/dist/Image ./AnyKernel3/
          sed -i '$a\/data/adb/ksud module install $AKHOME/ksu_module_susfs_1.5.2+.zip' ./AnyKernel3/anykernel.sh
          sed -i '$a\pm uninstall me.weishu.kernelsu' ./AnyKernel3/anykernel.sh
+         sed -i '$a\pm install $AKHOME/KernelSU_Next_v1.0.4_12335-release.apk' ./AnyKernel3/anykernel.sh
       
-      - name: Download SUSFS Module
+      - name: Download SUSFS Module & KSUN Manager
         run: |
-          wget https://github.com/sidex15/susfs4ksu-module/releases/download/v1.5.2-v1.5.4-R13/ksu_module_susfs_1.5.2+.zip -O ksu_module_susfs_1.5.2+.zip
+          wget https://github.com/sidex15/susfs4ksu-module/releases/download/v1.5.2-v1.5.4-R13/ksu_module_susfs_1.5.2+.zip
           mv ksu_module_susfs_1.5.2+.zip ./AnyKernel3/
-                    
+          wget https://github.com/rifsxd/KernelSU-Next/releases/download/v1.0.4/KernelSU_Next_v1.0.4_12335-release.apk
+          mv KernelSU_Next_v1.0.4_12335-release.apk ./AnyKernel3/
+          
       - name: Upload AnyKernel3
         uses: actions/upload-artifact@v4
         with:
