--- a/.github/workflows/Build-KernelSU-Next-SUSFS4OPAce2.yml
+++ b/.github/workflows/Build-KernelSU-Next-SUSFS4OPAce2.yml
@@ -61,10 +61,8 @@ jobs:
          repo sync         
          find kernel_platform/common/android/ -name "abi_gki_protected_exports_*" -delete
          find kernel_platform/msm-kernel/android/ -name "abi_gki_protected_exports_*" -delete
-         sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion
-         sed -i 's/ -dirty//g' kernel_platform/msm-kernel/scripts/setlocalversion   
-         sed -i 's/echo -n "$KERNELVERSION"/echo -n "$KERNELVERSION-Mortis"/' kernel_platform/common/scripts/setlocalversion
-         sed -i 's/echo -n "$KERNELVERSION"/echo -n "$KERNELVERSION-Mortis"/' kernel_platform/msm-kernel/scripts/setlocalversion
+         sed -i 's/ -dirty/ -Mortis/g' kernel_platform/common/scripts/setlocalversion
+         sed -i 's/ -dirty/ -Mortis/g' kernel_platform/msm-kernel/scripts/setlocalversion   
          
       - name: Set LTO to THIN
         run: |
