--- a/.github/workflows/Build-MKSU4OPAce2.yml
+++ b/.github/workflows/Build-MKSU4OPAce2.yml
@@ -66,7 +66,13 @@ jobs:
         rm kernel_platform/msm-kernel/android/abi_gki_protected_exports_* || echo "No protected exports!"
         sed -i 's/ -dirty//g' kernel_platform/common/scripts/setlocalversion
         sed -i 's/ -dirty//g' kernel_platform/msm-kernel/scripts/setlocalversion
-
+      
+     - name: Set LTO to THIN
+       run: |
+         cd kernel_workspace/kernel_platform
+         sed -i 's/CONFIG_LTO=n/CONFIG_LTO=y/' "./common/arch/arm64/configs/gki_defconfig"
+         sed -i 's/CONFIG_LTO_CLANG_FULL=y/CONFIG_LTO_CLANG_THIN=y/' "./common/arch/arm64/configs/gki_defconfig"
+         sed -i 's/CONFIG_LTO_CLANG_NONE=y/CONFIG_LTO_CLANG_THIN=y/' "./common/arch/arm64/configs/gki_defconfig"
      - name: Set up KernelSU
        run: |
         cd kernel_workspace/kernel_platform
