--- a/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
+++ b/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
@@ -102,8 +102,8 @@ jobs:
            #cp ../kernel_patches4mksu/apk_sign.c_fix.patch ./
            #patch -p1 -F 3 < apk_sign.c_fix.patch
              
-           #cp ../kernel_patches4mksu/core_hook.c_fix.patch ./
-           #patch -p1 --fuzz=3 < ./core_hook.c_fix.patch
+           cp ../kernel_patches4mksu/core_hook.c_fix.patch ./
+           patch -p1 --fuzz=3 < ./core_hook.c_fix.patch
            
            #cp ../kernel_patches4mksu/selinux.c_fix.patch ./
            #patch -p1 -F 3 < selinux.c_fix.patch
