--- a/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
+++ b/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
@@ -112,8 +112,8 @@ jobs:
            sed -i "s#$old_umount#$new_umount#g" KernelSU/kernel/core_hook.c
            sed -i "s#$old_zygote#$new_zygote#g" KernelSU/kernel/core_hook.c
            
-           cp ../kernel_patches4mksu/selinux.c_fix.patch ./
-           patch -p1 -F 3 < selinux.c_fix.patch
+           #cp ../kernel_patches4mksu/selinux.c_fix.patch ./
+           #patch -p1 -F 3 < selinux.c_fix.patch
            
       - name: Build kernel
         run: |
