--- a/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
+++ b/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
@@ -112,13 +112,14 @@ jobs:
            sed -i "/ksu_try/! s#$old_umount#$new_umount#g" KernelSU/kernel/core_hook.c
            sed -i "/ksu_try/! s#$old_zygote#$new_zygote#g" KernelSU/kernel/core_hook.c
 
-           cp ../kernel_patches4mksu/2core_hook.patch ./
-           patch -p1 -F 3 < 2core_hook.patch
+           #cp ../kernel_patches4mksu/2core_hook.patch ./
+           #patch -p1 -F 3 < 2core_hook.patch
            #cp ../kernel_patches4mksu/selinux.c_fix.patch ./
            #patch -p1 -F 3 < selinux.c_fix.patch
            
       - name: Build kernel
         run: |
+         sed -i '/pts_unix98_lookup_kp/ s/^//// ' kernel_workspace/kernel_platform/common/drivers/kernelsu/sucompat.c
          cd kernel_workspace
          find . -name "core_hook.c"
          ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{ github.event.inputs.CPUD }} gki
