--- a/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
+++ b/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
@@ -111,7 +111,7 @@ jobs:
            new_zygote='ksu_is_zygote(old->security);'
            sed -i "/ksu_try/! s#$old_umount#$new_umount#g" KernelSU/kernel/core_hook.c
            sed -i "/ksu_try/! s#$old_zygote#$new_zygote#g" KernelSU/kernel/core_hook.c
-
+           sed -i '954s/^/# /' core_hook.c
            #cp ../kernel_patches4mksu/2core_hook.patch ./
            #patch -p1 -F 3 < 2core_hook.patch
            #cp ../kernel_patches4mksu/selinux.c_fix.patch ./
@@ -121,7 +121,6 @@ jobs:
         run: |
          sed -i '/pts_unix98_lookup_kp/ s/^//// ' kernel_workspace/kernel_platform/common/drivers/kernelsu/sucompat.c
          cd kernel_workspace
-         find . -name "core_hook.c"
          ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{ github.event.inputs.CPUD }} gki
          
       - name: Make AnyKernel3
