--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -48,82 +48,12 @@ jobs:
          sudo apt update && sudo apt upgrade -y
          sudo apt install -y python3 git
 
-      - name: Install repo tool
+      - name: Download latest susfs4ksu module
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
-         curl https://storage.googleapis.com/git-repo-downloads/repo > ~/repo
-         chmod a+x ~/repo
-         sudo mv ~/repo /usr/local/bin/repo
-
-      - name: Initialize repo 和 sync
-        run: |
-         mkdir kernel_workspace && cd kernel_workspace
-         repo init -u https://github.com/OnePlusOSS/kernel_manifest.git -b refs/heads/oneplus/${{ github.event.inputs.CPU }} -m ${{ github.event.inputs.FEIL }}.xml --depth=1
-         repo sync         
-         find kernel_platform/common/android/ -name "abi_gki_protected_exports_*" -delete
-         find kernel_platform/msm-kernel/android/ -name "abi_gki_protected_exports_*" -delete
-         sed -i 's/ -dirty/ -Mortis/g' kernel_platform/common/scripts/setlocalversion
-         sed -i 's/ -dirty/ -Mortis/g' kernel_platform/msm-kernel/scripts/setlocalversion   
-         
-      - name: Set LTO to THIN
-        run: |
-         cd kernel_workspace/kernel_platform
-         sed -i 's/CONFIG_LTO=n/CONFIG_LTO=y/' "./common/arch/arm64/configs/gki_defconfig"
-         sed -i 's/CONFIG_LTO_CLANG_FULL=y/CONFIG_LTO_CLANG_THIN=y/' "./common/arch/arm64/configs/gki_defconfig"
-         sed -i 's/CONFIG_LTO_CLANG_NONE=y/CONFIG_LTO_CLANG_THIN=y/' "./common/arch/arm64/configs/gki_defconfig"
-
-      - name: Set up MKSU
-        run: |
-         cd kernel_workspace/kernel_platform
-         curl -LSs "https://raw.githubusercontent.com/5ec1cff/KernelSU/refs/heads/main/kernel/setup.sh" | sed 's#https://github.com/tiann/KernelSU#https://github.com/5ec1cff/KernelSU#g' | bash -
-        
-      - name: Set up susfs
-        run: |
-           cd kernel_workspace           
-           git clone https://gitlab.com/simonpunk/susfs4ksu.git -b gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}
-           git clone https://github.com/TanakaLun/kernel_patches4mksu.git
-           cd kernel_platform
-           cp ../susfs4ksu/kernel_patches/KernelSU/10_enable_susfs_for_ksu.patch ./KernelSU/
-           cp ../susfs4ksu/kernel_patches/50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch ./common/
-           cp ../susfs4ksu/kernel_patches/fs/* ./common/fs/
-           cp ../susfs4ksu/kernel_patches/include/linux/* ./common/include/linux/
-
-           # Apply patches
-           cd ./KernelSU
-           patch -p1 --forward < 10_enable_susfs_for_ksu.patch || true
-           cd ../common
-           patch -p1 < 50_add_susfs_in_gki-${{ github.event.inputs.ANDROID_VERSION }}-${{ github.event.inputs.KERNEL_VERSION }}.patch || true
-           cp ../../kernel_patches4mksu/69_hide_stuff.patch ./
-           patch -p1 -F 3 < 69_hide_stuff.patch
-           git add -A && git commit -a -m "BUILD Kernel"
-           cd ..
-           cd ./msm-kernel && git add -A && git commit -a -m "BUILD Kernel"
-           cd ..
-             
-           #cp ../kernel_patches4mksu/apk_sign.c_fix.patch ./
-           #patch -p1 -F 3 < apk_sign.c_fix.patch
-             
-           #cp ../kernel_patches4mksu/core_hook.c_fix.patch ./
-           #patch -p1 --fuzz=3 < ./core_hook.c_fix.patch
-           
-           old_umount='try_umount("'
-           new_umount='ksu_try_umount("'
-           old_zygote='is_zygote(old->security);'
-           new_zygote='ksu_is_zygote(old->security);'
-           sed -i "/ksu_try/! s#$old_umount#$new_umount#g" KernelSU/kernel/core_hook.c
-           sed -i "/ksu_try/! s#$old_zygote#$new_zygote#g" KernelSU/kernel/core_hook.c
-
-           #cp ../kernel_patches4mksu/2core_hook.patch ./
-           #patch -p1 -F 3 < 2core_hook.patch
-           #cp ../kernel_patches4mksu/selinux.c_fix.patch ./
-           #patch -p1 -F 3 < selinux.c_fix.patch
-           
-      - name: Package core_hook.c
-        run: |
-           cd kernel_workspace/kernel_platform/KernelSU/kernel
-           zip core_hook.zip core_hook.c
-
-      - name: Upload core_hook.zip as Artifact
-        uses: actions/upload-artifact@v4
-        with:
-         name: core_hook.zip
-         path: kernel_workspace/kernel_platform/KernelSU/kernel/core_hook.zip
+          LATEST_URL=$(curl -sSLH "Authorization: Bearer $GH_TOKEN" \
+            https://api.github.com/repos/sidex15/susfs4ksu-module/releases/latest \https://api.github.com/repos/sidex15/susfs4ksu-module/releases/latest
+            | jq -r '.assets[] | select(.name | contains("ksu_module_susfs_1.5.2+")) | .browser_download_url')
+          curl -LO "$LATEST_URL"
+          echo "Downloaded file: $(ls ksu_module_susfs_1.5.2+*.zip)"         
