--- a/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
+++ b/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
@@ -124,8 +124,8 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           LATEST_URL=$(curl -sSLH "Authorization: Bearer $GH_TOKEN" \
-            https://api.github.com/repos/sidex15/susfs4ksu-module/releases/latest \https://api.github.com/repos/sidex15/susfs4ksu-module/releases/latest
-            | jq -r '.assets[] | select(.name | contains("ksu_module_susfs_1.5.2+")) | .browser_download_url')
+            https://api.github.com/repos/sidex15/susfs4ksu-module/releases/latest \
+            | jq -r '.assets[] | select(.name | test("ksu_module_susfs_1.5.2\\+.*\\.zip")) | .browser_download_url')
           curl -LO "$LATEST_URL"
           echo "Downloaded file: $(ls ksu_module_susfs_1.5.2+*.zip)"         
           mv ksu_module_susfs_1.5.2+.zip ./AnyKernel3/
