--- a/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
+++ b/.github/workflows/Build-MKSU-SUSFS4OPAce2.yml
@@ -76,7 +76,7 @@ jobs:
            #patch -p1 --forward < mksu_susfs.patch || true
            #patch -p1 --forward < fix.patch || true
            cd ../common
-           patch -p1 < 50_add_susfs_in_gki-android12-5.10.patch || true
+          # patch -p1 < 50_add_susfs_in_gki-android12-5.10.patch || true
            #patch -p1 -F 3 < new_hooks.patch
            #patch -p1 -F 3 < 69_hide_stuff.patch
            git add -A && git commit -a -m "BUILD Kernel"
