--- a/.github/workflows/Build-Kernel.yml
+++ b/.github/workflows/Build-Kernel.yml
@@ -209,11 +209,11 @@ jobs:
                               
       - name: Build kernel 
         run: |
-         cd kernel_workspace/kernel_platform
-         if [ -f "./build_with_bazel.py" ]; then
-          LTO=thin ./build_with_bazel.py -t ${{ github.event.inputs.CPUD }} gki
+         cd kernel_workspace
+         if [ -f "./kernel_platform/build_with_bazel.py" ]; then
+          LTO=thin ./kernel_platform/build_with_bazel.py -t ${{ github.event.inputs.CPUD }} gki
          else
-          LTO=thin ./oplus/build/oplus_build_kernel.sh ${{ github.event.inputs.CPUD }} gki
+          LTO=thin ./kernel_platform/oplus/build/oplus_build_kernel.sh ${{ github.event.inputs.CPUD }} gki
          fi
 
       - name: Make AnyKernel3
